
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].


[[v1.0.0]]
== 1.0.0 (03.10.2019)

icon:bullhorn[] New UI

[quote]
____

This version of Gentics Mesh contains the a new UI which is accessible via `/mesh-ui`. The old UI is still part of this release and can be accessed via `/mesh-ui-v1`.

The following noteworthy aspects of the UI have been updated / altered:

* The permission management has been reworked
* The new schema editor which features autocompletion
* The usability of the edit view has been enhanced
* The editor for HTML fields has been replaced
* A new image editor has been added which now supports focal point handling
* Language handling has been improved
* The UI no longer depends on Elasticsearch
____

icon:bullhorn[] New defaults

[quote]
____

For new server installations (`mesh-server`) the Elasticsearch embedded server will no longer be enabled by default. The demo server (`mesh-demo`) will still start the embedded Elasticsearch server for ease of use.
It is still possible to enable the embedded server via the `search.startEmbedded: true` and `search.url: http://localhost:9200` settings in the `mesh.yml` file.
____


icon:check[] Search: Synchronizing the search index when starting after Gentics Mesh has not been stopped properly will not block the startup routine anymore. link:https://github.com/gentics/mesh/issues/862[#862]

icon:check[] Core: Path resolving performance has been increased.

[[v0.41.0]]
== 0.41.0 (01.10.2019)

icon:plus[] REST: The ETag generation was reworked. This means that previously generated ETags are no longer valid.

icon:check[] REST: Fixed ETag generation when `fields` or `rolePerms` was used. Previously these parameters did not affect the ETag. link:https://github.com/gentics/mesh/issues/881[#881]

CAUTION: Reworked OAuth2 / OIDC support

[quote]
____